@@ -26,7 +26,12 @@
       <artifactId>javafx-fxml</artifactId>
       <version>21</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>23</version>
+    </dependency>
+
     <!-- MaterialFX -->
     <dependency>
       <groupId>io.github.palexdev</groupId>
@@ -83,6 +88,9 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>cr.ac.una.proyecto1progra2.App</mainClass>
+          <args>
+            <arg>--add-modules=javafx.controls,javafx.fxml,javafx.media</arg>
+          </args>
         </configuration>
         <executions>
           <execution>
